Work on the Form using Material UI for SCP.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <section id='app-container' class='pure-form'></section>
+        <section id='app-container'></section>
 
         <script id='initial-state' type='application/json'>${initialState}</script>
         <script src=/lib/keylines/js/keylines.js></script>
