--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chewbacca UI</title>
+        <title>SCP</title>
         <meta charset='utf-8' />
+        <link rel='icon' href='/images/favicon.ico' type='image/x-icon'>
         <link rel='stylesheet' href='/build/css/vendor.css'/>
         <link rel='stylesheet' href='/build/css/app.css'/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
